# ROS2-Cubic-Trajectory-Generation-and-Visualization

./: README.md
install/: local_setup.sh  setup.sh
install/ar_interface/include/ar_interface/ar_interface/msg/detail/: cubic_traj_params__struct.h
install/ar_interface/share/ament_index/resource_index/parent_prefix_path/: ar_interface
install/ar_interface/share/ar_interface/: package.sh
install/ar_interface/share/ar_interface/cmake/: ar_interfaceConfig.cmake  ar_interface__rosidl_typesupport_cppExport.cmake  ar_interface__rosidl_typesupport_introspection_cExport.cmake  export_ar_interface__rosidl_generator_cExport.cmake  export_ar_interface__rosidl_generator_pyExport.cmake  export_ar_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_ar_interface__rosidl_typesupport_fastrtps_cppExport.cmake
install/ar_interface/share/ar_interface/msg/: CubicTrajCoeffs.msg  CubicTrajParams.msg
install/ar_test/share/ar_test/: package.sh  package.xml
install/ar_test/share/ar_test/launch/: cubic_traj_gen.launch.py
log/: latest_build
src/ar_interface/: CMakeLists.txt  package.xml
src/ar_test/: setup.py
src/ar_test/ar_test/: cubic_traj_planner.py  points_generator.py
